[package]
name = "conformance"
version = "0.1.0"
edition = "2024"

[build-dependencies]
prust-build = { path = "../prust-build" }
prost-build = { version = "0.14" }
tonic-prost-build = { version = "0.14" }

[dev-dependencies]
prost = { version = "0.14" }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
arbitrary = { version = "1.4", features = ["derive"] }
tokio = { version = "1.47", features = ["macros"] }
tokio-stream = { version = "0.1", features = ["sync"] }

[dependencies]
paste = { version = "1.0" }
prost = { version = "0.14" }
rand = { version = "0.9" }
prust = { path = "../prust", features = ["tonic"] }
tonic = { version = "0.14" }
tonic-prost = { version = "0.14" }
