[package]
name = "prust-health"
version = "0.1.0"
edition = "2024"

[features]
default = ["client", "server"]
client = []
server = ["dep:tokio", "dep:tokio-stream"]

[dependencies]
prust = { path = "../prust", features = ["tonic"] }
tokio = { version = "1.52", default-features = false, optional = true, features = ["sync"] }
tokio-stream = { version = "0.1", default-features = false, optional = true, features = ["sync"] }
