[package]
name = "prust"
version = "0.1.0"
edition = "2024"
rust-version = "1.88.0"

[features]
default = []
tonic = ["dep:bytes", "dep:tonic"]

[[bench]]
name = "encoding"
harness = false

[dev-dependencies]
criterion = { version = "0.7" }

[dependencies]
bytes = { version = "1.10", optional = true }
tonic = { version = "0.14", optional = true }
